# aerell-studio

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
docs/: TODO.txt
include/aerell_studio/widgets/: text_editor_widget.h
include/aerell_studio/windows/: main_window.h
src/aerell_studio/: main.cpp
src/aerell_studio/widgets/: text_editor_widget.cpp
src/aerell_studio/windows/: main_window.cpp
